# ekf_localization

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
config/: parameters.yaml
include/: featuresextractor.h  geometry_helpers.h
include/bayesian_filtering/: customparticlefilter.h  nonlinearsystempdf.h
include/include/bayesian_filtering/: nonlinearanalyticconditionalgaussian3D.h  nonlinearmeasurementpdf.h
launch/: ekf_localization.launch  ekf_localization.launch~
rviz/: ekf_localization.rviz  gmapping.rviz
src/: featuresextractor.cpp  kalman.cpp  kalman.hpp  main.cpp  nonlinearanalyticconditionalgaussianmobile.cpp  odom.cpp
src/bayesian_filtering/: linearanalyticconditionalgaussianmobile.cpp  linearanalyticconditionalgaussianmobile.h  nonlinearanalyticconditionalgaussianmobile.cpp  nonlinearmeasurementpdf.cpp  nonlinearsystempdf.cpp
src/bayesian_filtering/test/: BayesianFilterNode.h  mobile_robot.cpp  test_nonlinear_kalman.cpp
src/src/: kalman.cpp  kalman.hpp  main.cpp
src/src/bayesian_filtering/: customparticlefilter.cpp  nonlinearanalyticconditionalgaussian3D.cpp  nonlinearanalyticconditionalgaussianodo.cpp  test_nonlinear_kalman.cpp
src/src/bayesian_filtering/test/: BayesianFilterNode.cpp  mobile_robot.h  mobile_robot_wall_cts.h
